--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
   url_launcher: ^6.1.5
   logging: ^1.0.2
   google_mobile_ads: ^3.0.0
+  vibration: ^1.7.7
+  auto_size_text: ^3.0.0
+  numberpicker: ^2.1.2
+  json_annotation: ^4.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  numberpicker: ^2.1.2
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +59,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.2.0
+  build_runner: ^2.1.11
+  flutter_launcher_icons: ^0.12.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
