--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   auto_size_text: ^3.0.0
   numberpicker: ^2.1.2
   json_annotation: ^4.5.0
+  timeago: ^3.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
