--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.2.1
   sembast: ^3.5.0+1
   path_provider: ^2.1.1
+  tutorial_coach_mark: ^1.2.8
 
 dev_dependencies:
   flutter_test:
