--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   path_provider: ^2.1.1
   tutorial_coach_mark: ^1.2.8
   sembast: ^3.5.0+1
+  sembast_web: ^2.1.3
 
 dev_dependencies:
   flutter_test:
