--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   tutorial_coach_mark: ^1.2.8
   sembast: ^3.5.0+1
   sembast_web: ^2.1.3
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
