--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   sembast: ^3.5.0+1
   sembast_web: ^2.1.3
   flutter_colorpicker: ^1.0.3
+  upgrader: ^8.2.0
 
 dev_dependencies:
   flutter_test:
